index page design update and fixes to social-media-list being uneven

--- a/_sass/main/_base.scss
+++ b/_sass/main/_base.scss
@@ -19,9 +19,7 @@ body {
   color: $text-color;
   background-color: $background-color;
   overflow-y: scroll;
-  font-size: 16px;
-  @include lato-font(300);
-  line-height: 19px;
+  line-height: 0px;
 }
 
 
